css "align main" error fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ h1 {
 }
 main {
     display: block;
-    align: center;
+    align-content: center;
 }
 footer {
     background-color: #002147;
